WIP SMS Templating Endpoints
