# src/pkg/server/generated/types.gen.go
@@ -1,6 +1,6 @@
 // Package server provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.2.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
 package server
 
 // Defines values for ErrorType.
@@ -85,10 +85,45 @@ type Placeholders struct {
 	} `json:"placeholders"`
 }
 
+// SMSFilledTemplateResponse defines model for SMSFilledTemplateResponse.
+type SMSFilledTemplateResponse = string
+
+// SMSPlaceholders defines model for SMSPlaceholders.
+type SMSPlaceholders struct {
+	Placeholders []struct {
+		Data *[]struct {
+			Key   string `json:"key"`
+			Value string `json:"value"`
+		} `json:"data,omitempty"`
+	} `json:"placeholders"`
+}
+
 // SMSSendRequest defines model for SMSSendRequest.
 type SMSSendRequest struct {
 	Message             string `json:"message"`
 	ReceiverPhoneNumber string `json:"receiverPhoneNumber"`
+}
+
+// SMSTemplate defines model for SMSTemplate.
+type SMSTemplate struct {
+	Name           string `json:"name"`
+	TemplateString string `json:"templateString"`
+}
+
+// SMSTemplateFillRequest defines model for SMSTemplateFillRequest.
+type SMSTemplateFillRequest struct {
+	Placeholders struct {
+		Age       string `json:"Age"`
+		FirstName string `json:"FirstName"`
+		LastName  string `json:"LastName"`
+	} `json:"placeholders"`
+	ReceiverPhoneNumber string `json:"receiverPhoneNumber"`
+	ShouldBeSent        bool   `json:"shouldBeSent"`
+}
+
+// SMSTemplatePostRequest defines model for SMSTemplatePostRequest.
+type SMSTemplatePostRequest struct {
+	TemplateString string `json:"templateString"`
 }
 
 // Status The status of the API
@@ -153,3 +188,9 @@ type SendMJMLEmailWithAttachmentMultipartRequestBody = MJMLSendRequestAttachment
 
 // SendSMSJSONRequestBody defines body for SendSMS for application/json ContentType.
 type SendSMSJSONRequestBody = SMSSendRequest
+
+// AddNewSMSTemplateJSONRequestBody defines body for AddNewSMSTemplate for application/json ContentType.
+type AddNewSMSTemplateJSONRequestBody = SMSTemplatePostRequest
+
+// FillSMSTemplateJSONRequestBody defines body for FillSMSTemplate for application/json ContentType.
+type FillSMSTemplateJSONRequestBody = SMSTemplateFillRequest
